--- a/style.css
+++ b/style.css
@@ -167,6 +167,26 @@ nav {
   text-overflow: ellipsis;
 }
 
+.messagecart {
+  position: sticky;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 40px;
+  transform: translateY(100%);
+  background-color: green;
+  color: var(--bg-darker);
+  font-weight: 500;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.messagecart-active {
+  transition: all ease 0.5s;
+  transform: translateY(0%);
+}
+
 /*CART CONTAINER BUTTONS*/
 
 .cart-buttons {
