final commit v2 added products

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ nav {
   margin-top: 12px;
   margin-bottom: 12px;
   align-self: center;
-  width: 250px;
+  height: 220px;
 }
 
 .product-card:hover,
